--- a/index.html
+++ b/index.html
@@ -29,9 +29,17 @@
 		<main class="page">
 			<div class="page__main-block main-block">
 				<div class="main-block__container _container">
-					<h1 class="main-block__title"></h1>
-					<div class="main-block__text"></div>
-					<div class="main-block__batton"></div>
+					<div id="a" class="main-block__body">
+						<h1 class="main-block__title">Hi, I am John,<br> Creative Technologist</h1>
+						<div class="main-block__text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
+						<div class="main-block__batton">
+							<a href="" class="main-block__batton_Download">Download Resume</a>
+						</div>
+					</div>
+					<div id="b" class="main-block__image _container">
+						<img src="image/John.png" alt="John">
+					</div>
+					
 				</div>
 			</div>
 		</main>
