отредактировала меню для мобилки

--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
 					</ul>
 				</nav>
 			</div>
+			<div class="header__container__lines">
+				<div class="header__menu__lines"> 
+				     <a href="" class="menu__lines"> 
+				      <span class="menu__line"></span> 
+				      <span class="menu__line"></span> 
+				      <span class="menu__line"></span> 
+				     </a> 
+    			</div>
+			</div>
 		</header>
 		<main class="page">
 			<div class="page__main-block main-block">
