--- a/index.html
+++ b/index.html
@@ -51,6 +51,34 @@
 					
 				</div>
 			</div>
+			<section class="section__cards-block">
+				<div class="section__inner _container">
+					<div class="title__wrapper">
+						<div class="title">Recent posts</div>
+						<a href="" class="view">View all</a>
+					</div>
+
+					<div class="card__wrapper">
+						<div class="card">
+							<div class="card__title">Making a design system from scratch</div>
+							<div class="date__wrapper">
+								<div class="text">12 Feb 2020</div>
+								<div class="text">Design, Pattern</div>
+							</div>
+							<div class="card__text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
+						</div>
+						<div class="card">
+							<div class="card__title">Making a design system from scratch</div>
+							<div class="date__wrapper">
+								<div class="text">12 Feb 2020</div>
+								<div class="text">Figma, Icon Design</div>
+							</div>
+							<div class="card__text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
+						</div>
+					</div>
+
+				</div>
+			</section>
 		</main>
 		<footer class="footer">
 			
