--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
 						</div>
 					</div>
 					<div id="b" class="main-block__image _container">
-						<img src="image/John.png" alt="John">
+						<image src="image/John.png" alt="John">
 					</div>
 					
 				</div>
 			</div>
 			<section class="section__cards-block">
 				<div class="section__inner _container">
-					<div class="title__wrapper">
+					<div class="cards-block__title">
 						<div class="title">Recent posts</div>
 						<a href="" class="view">View all</a>
 					</div>
@@ -79,6 +79,52 @@
 
 				</div>
 			</section>
+			<section class="section-work-block">
+				<div class="section__inner _container">
+					<div class="title">Featured works</div>
+					<div class="block__wrapper">
+						<div class="block">
+							<div class="left">
+								<image src="image/Rectangle 30.png" alt="">
+							</div>
+							<div class="right">
+								<a href="" class="right__title">Designing Dashboards</a>
+								<div class="info__wrapper">
+									<div class="year">2020</div>
+									<div class="type">Dashboard</div>
+								</div>
+								<div class="right__text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
+							</div>
+						</div>
+						<div class="block1">
+							<div class="left">
+								<image src="image/Rectangle 32.png" alt="">
+							</div>
+							<div class="right">
+								<a href="" class="right__title">Vibrant Portraits of 2020</a>
+								<div class="info__wrapper">
+									<div class="year">2018</div>
+									<div class="type">Illustration</div>
+								</div>
+								<div class="right__text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
+							</div>
+						</div>
+						<div class="block2">
+							<div class="left">
+								<image src="image/Rectangle 34.png" alt="">
+							</div>
+							<div class="right">
+								<a href="" class="right__title">36 Days of Malayalam type</a>
+								<div class="info__wrapper">
+									<div class="year">2018</div>
+									<div class="type">Typography</div>
+								</div>
+								<div class="right__text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
+							</div>
+						</div>
+					</div>
+				</div>
+	</section>
 		</main>
 		<footer class="footer">
 			
