--- a/index.html
+++ b/index.html
@@ -62,16 +62,16 @@
 						<div class="card">
 							<div class="card__title">Making a design system from scratch</div>
 							<div class="date__wrapper">
-								<div class="text">12 Feb 2020</div>
-								<div class="text">Design, Pattern</div>
+								<div class="text1">12 Feb 2020</div>
+								<div class="text1">Design, Pattern</div>
 							</div>
 							<div class="card__text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
 						</div>
 						<div class="card">
 							<div class="card__title">Making a design system from scratch</div>
 							<div class="date__wrapper">
-								<div class="text">12 Feb 2020</div>
-								<div class="text">Figma, Icon Design</div>
+								<div class="text1">12 Feb 2020</div>
+								<div class="text1">Figma, Icon Design</div>
 							</div>
 							<div class="card__text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
 						</div>
@@ -127,7 +127,13 @@
 	</section>
 		</main>
 		<footer class="footer">
-			
+			<div class="Contact-Information__wrapper">
+				<img src="image/fb.png" alt="">
+				<img src="image/inst.png" alt="">
+				<img src="image/tw.png" alt="">
+				<img src="image/in.png" alt="">
+			</div>
+		<div class="text">Copyright ©2020 All rights reserved</div>
 		</footer>
 	</div>
 
