--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 					</ul>
 				</nav>
 			</div>
-			<div class="header__container__lines">
-				<div class="header__menu__lines"> 
-				     <a href="" class="menu__lines"> 
+			<div  class="header__container__lines">
+				<div id="burger" class="header__menu__lines"> 
+				     <div href="" class="menu__lines"> 
 				      <span class="menu__line"></span> 
 				      <span class="menu__line"></span> 
 				      <span class="menu__line"></span> 
-				     </a> 
+				     </div> 
     			</div>
 			</div>
 		</header>
